examples/test/testpolicy566.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy566
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key46: value17
      key32: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value39
          key9: value15
          key11: value7
      podSelector:
        matchLabels:
          key34: value43
          key20: value35
